[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml2pydantic"
version = "0.1.0"
description = "Convert YAML schemas to Pydantic models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0.0", "pyyaml>=6.0.0", "rich>=13.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "isort>=5.0.0", "mypy>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["schema_components", "schema_core"]
